--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "dev": "webpack --mode development", 
+    "build": "webpack --mode production", 
+    "start": "webpack-dev-server --mode development --open"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,9 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
