--- a/package.json
+++ b/package.json
@@ -5,24 +5,32 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development", 
-    "build": "webpack --mode production", 
-    "start": "webpack-dev-server --mode development --open"
+    "dev": "webpack --mode=development",
+    "build": "webpack --mode=production",
+    "start": "npm run open",
+    "open": "concurrently \"http-server -a localhost -p 1234\" \"sleepms 1000 && open http://localhost:1234/dist\""
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kunmi02/restaurant-page.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kunmi02/restaurant-page/issues"
+  },
+  "homepage": "https://github.com/kunmi02/restaurant-page#readme",
   "devDependencies": {
     "babel-eslint": "10.1.x",
+    "concurrently": "^6.0.0",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
+    "http-server": "^0.12.3",
+    "sleep-ms": "^2.0.1",
     "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
