added css file to the project

--- a/package.json
+++ b/package.json
@@ -24,11 +24,20 @@
   "devDependencies": {
     "babel-eslint": "10.1.x",
     "concurrently": "^6.0.0",
+    "css-loader": "^5.2.0",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
     "http-server": "^0.12.3",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
     "sleep-ms": "^2.0.1",
+    "style-loader": "^2.0.0",
+    "stylelint": "13.3.x",
+    "stylelint-config-standard": "20.0.x",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "3.17.x",
+    "ts-loader": "^8.1.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
