added scss loader

--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "babel-eslint": "10.1.x",
     "concurrently": "^6.0.0",
     "css-loader": "^5.2.0",
+    "cssnano": "^4.1.10",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
     "http-server": "^0.12.3",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^5.2.0",
     "sass": "^1.32.7",
     "sass-loader": "^11.0.1",
     "sleep-ms": "^2.0.1",
